# arc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: Dockerfile
examples/blue-green-switch/: README.md  docker-compose.yml
examples/blue-green-switch/project/: Cargo.toml  Dockerfile
examples/build-tool/: README.md  arc.lua
examples/db-migrations/: README.md  arc.lua  docker-compose.yml  migrate.lua  postgres.lua
examples/db-migrations/helpers/: fs.lua  migrations.lua  postgres.lua
examples/db-migrations/migrations/: 001_create_users.sql  002_create_posts.sql
examples/loadbalancer/: README.md  arc.lua  docker-compose.yml
examples/loadbalancer/configs/: haproxy.cfg
examples/loadbalancer/tasks/: backend.lua  loadbalancer.lua
examples/loadbalancer/templates/: index.html
examples/local-dev-env-and-remote-deployment/: README.md  docker-compose.yml
examples/local-dev-env-and-remote-deployment/project/: Cargo.toml  Dockerfile
examples/local-dev-env-and-remote-deployment/project/env/: .env  arc.lua  helpers.lua  important.lua  targets.lua  types.lua
examples/local-dev-env-and-remote-deployment/project/env/application/: docker.lua
examples/local-dev-env-and-remote-deployment/project/env/application/containerized/: grafana.lua  tempo.lua  webservice.lua
examples/local-dev-env-and-remote-deployment/project/env/application/containerized/grafana/: docker-compose.yml
examples/local-dev-env-and-remote-deployment/project/env/application/containerized/tempo/: docker-compose.yml  tempo.yaml
examples/local-dev-env-and-remote-deployment/project/env/application/containerized/webservice/: docker-compose.yml
examples/local-dev-env-and-remote-deployment/project/env/application/local/: env  webservice.lua
examples/local-dev-env-and-remote-deployment/project/env/helpers/: container.lua  paths.lua  string.lua
examples/local-dev-env-and-remote-deployment/project/src/: main.rs
examples/mini-ansible/: README.md  arc.lua  docker-compose.yml  playbook.yaml
examples/mini-ansible/files/: style.css
examples/mini-ansible/templates/: index.html
examples/nginx-static-site/: README.md  arc.lua  docker-compose.yml  types.lua
examples/nginx-static-site/frontend/: index.html  style.css
examples/nginx-static-site/tasks/: frontend.lua  nginx.lua
src/: arc.lua  cli.rs  engine.rs  error.rs  init.rs  inventory.rs  list.rs  logger.rs  main.rs  memory.rs  operations.rs  progress.rs  ssh.rs  targets.rs  tasks.rs  types.lua
src/engine/: delegator.rs  executor.rs  file_system.rs  format.rs  modules.rs  objects.rs  operations.rs  readonly.rs  recipe.rs  selection.rs  state.rs  system.rs  targets.rs  tasks.rs  templates.rs  validation.rs
src/engine/delegator/: error.rs  executor.rs  host.rs  local.rs  operator.rs  ssh.rs
src/engine/executor/: ssh.rs
src/engine/modules/: arc.rs  env.rs  file_system.rs  format.rs  host.rs  log.rs  operations.rs  (+4 more)
src/memory/: target_groups.rs  target_systems.rs  tasks.rs
src/progress/: command.rs  system.rs  task.rs  transfer.rs
(+31 files in other folders)
