[package]
name = "arc"
version = "0.1.0"
edition = "2021"
description = "A scriptable automation tool."
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
repository = "https://github.com/myFavShrimp/arc"
license = "MIT"
publish = true

[dependencies]
mlua = { version = "0.10", features = ["luau", "macros", "serialize"] }
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.0"
jiff = { version = "0.2.5", default-features = false, features = ["std"] }
colored = "3.0.0"
dotenvy = "0.15.7"
