[package]
name = "arc-automation"
version = "0.11.0"
edition = "2024"
description = "A scriptable automation tool."
authors = ["myFavShrimp <myfavshrimp@tuta.io>"]
repository = "https://github.com/myFavShrimp/arc"
license = "MIT"
publish = true
categories = [
    "command-line-utilities",
    "config",
    "development-tools"
]
keywords = ["orchestration", "ssh", "lua", "infrastructure", "scripting"]

[[bin]]
name = "arc"
path = "src/main.rs"

[profile.release]
lto = "fat"
strip = "symbols"

[dependencies]
mlua = { version = "0.11", features = ["luajit", "vendored", "macros", "serialize"] }
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.0"
jiff = { version = "0.2.5", default-features = false, features = ["std"] }
colored = "3.0.0"
dotenvy = "0.15.7"
indexmap = "2.12.1"
strum = { version = "0.27.2", features = ["derive"] }
tabled = "0.20.0"
indicatif = "0.17"
