[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "trace"] }
dotenv = "0.15"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
